--- a/app/assets/stylesheets/chat-rooms.scss
+++ b/app/assets/stylesheets/chat-rooms.scss
@@ -4,3 +4,12 @@
     width: auto;
     vertical-align: middle;
 }
+
+.room-nav-link {
+    border: 1px solid lighten(#0d6efd, 40%);
+    background: lighten(#0d6efd, 45%);
+
+    & + .room-nav-link {
+        border-top: 0 none;
+    }
+}
