--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 col-md-3">
-        <%= render partial: 'room' %>
+        <%= render partial: 'rooms' %>
     </div>
 
     <div class="col">
