--- a/app/assets/stylesheets/chat-rooms.scss
+++ b/app/assets/stylesheets/chat-rooms.scss
@@ -20,6 +20,26 @@
     height: 50vh;
     border-radius: 5px 5px 0 0;
     overflow-y: auto;
+
+    .chat-message-container {
+        padding: 5px;
+
+        .avatar {
+            margin: 5px;
+        }
+    }
+
+    .message-content {
+        padding: 5px;
+        border: 1px solid #0d6efd;
+        border-radius: 5px;
+        background: lighten(#0d6efd, 10%);
+        color: #ffffff;
+    }
+
+    & + .chat-message-container {
+        margin-top: 10px;
+    }
 }
 
 .chat-input {
